--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <service
             android:name=".services.SwipeneticService"
             android:icon="@drawable/ic_clock"
-            android:label="@string/tile_label_out"
+            android:label="@string/label_quick_tracker"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
 
             <intent-filter>
