--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
-
+        <service
+            android:name=".services.LiveTimeUpdateService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity
             android:name=".ui.activities.splash.SplashActivity"
@@ -26,26 +29,21 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-
-        <!-- Main -->
+        </activity> <!-- Main -->
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <service
-            android:name=".services.SwipeneticService"
+            android:name=".services.SwipeneticTileService"
             android:icon="@drawable/ic_clock"
             android:label="@string/label_quick_tracker"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
