--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
+
+
         <service
             android:name=".services.LiveTimeUpdateService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".ui.activities.splash.SplashActivity"
@@ -29,7 +31,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Main -->
+        </activity>
+
+        <!-- Main -->
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:label="@string/app_name"
