--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
 
+        <activity
+            android:name=".ui.activities.tag.SwipeTagsActivity"
+            android:theme="@style/AppTheme.DialogActivity" />
 
         <service
             android:name=".services.LiveTimeUpdateService"
@@ -31,9 +34,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Main -->
+        </activity> <!-- Main -->
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:label="@string/app_name"
