--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,6 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
 
-        <activity
-            android:name=".ui.activities.tag.SwipeTagsActivity"
-            android:theme="@style/AppTheme.DialogActivity" />
 
         <service
             android:name=".services.LiveTimeUpdateService"
@@ -38,7 +35,11 @@
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".services.SwipeneticTileService"
