--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    // Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 
     // Test
     testImplementation "junit:junit:$junit_version"
