--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <!--To update tile -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <!--To access wifi manager-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+
+
     <application
         android:name=".App"
         android:allowBackup="false"
