--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.theapache64.swipenetic">
-
-    <!--To update tile -->
+    <!-- To update tile -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-
 
     <application
         android:name=".App"
@@ -19,8 +16,8 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
-
-        <!--Splash-->
+        <activity android:name=".ui.activities.intro.IntroActivity"></activity>
+        <!-- Splash -->
         <activity
             android:name=".ui.activities.splash.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -29,9 +26,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Main -->
+        </activity> <!-- Main -->
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:label="@string/app_name"
@@ -39,27 +34,19 @@
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
-        </activity>
-
-        <!--Summary-->
+        </activity> <!-- Summary -->
         <activity
             android:name=".ui.activities.summary.SummaryActivity"
             android:label="@string/label_summary"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <!--Chart-->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- Chart -->
         <activity
             android:name=".ui.activities.chart.ChartActivity"
             android:label="@string/label_chart"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <!--Live time updater service-->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- Live time updater service -->
         <service
             android:name=".services.LiveTimeUpdateService"
             android:enabled="true"
-            android:exported="false" />
-
-        <!--Tile service-->
+            android:exported="false" /> <!-- Tile service -->
         <service
             android:name=".services.SwipeneticTileService"
             android:icon="@drawable/ic_clock"
@@ -69,7 +56,6 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
