--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     def dagger_version = '2.22.1'
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
@@ -73,6 +73,8 @@ dependencies {
     // Percentage calculation
     implementation 'com.theapache64.quick-percent:quick-percent:1.0.0-alpha01'
 
+    // WorkManager
+    implementation 'androidx.work:work-runtime:2.2.0'
 
     // Test
     testImplementation "junit:junit:$junit_version"
