--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         tools:targetApi="m">
 
         <activity android:name=".ui.activities.intro.IntroActivity" />
+
+
         <!-- Splash -->
         <activity
             android:name=".ui.activities.splash.SplashActivity"
@@ -28,7 +30,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Main -->
+        </activity>
+
+        <!-- Main -->
         <activity
             android:name=".ui.activities.main.MainActivity"
             android:label="@string/app_name"
@@ -36,19 +40,27 @@
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
-        </activity> <!-- Summary -->
+        </activity>
+
+        <!-- Summary -->
         <activity
             android:name=".ui.activities.summary.SummaryActivity"
             android:label="@string/label_summary"
-            android:theme="@style/AppTheme.NoActionBar" /> <!-- Chart -->
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <!-- Chart -->
         <activity
             android:name=".ui.activities.chart.ChartActivity"
             android:label="@string/label_chart"
-            android:theme="@style/AppTheme.NoActionBar" /> <!-- Live time updater service -->
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <!-- Live time updater service -->
         <service
             android:name=".services.LiveTimeUpdateService"
             android:enabled="true"
-            android:exported="false" /> <!-- Tile service -->
+            android:exported="false" />
+
+        <!-- Tile service -->
         <service
             android:name=".services.SwipeneticTileService"
             android:icon="@drawable/ic_clock"
