--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     // WorkManager
     implementation 'androidx.work:work-runtime:2.2.0'
 
+    // DatePicker
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+
     // Test
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.mockito:mockito-core:$mockito_version"
