--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         // Core
-        kotlin_version = '1.3.41'
+        kotlin_version = '1.3.61'
         compile_sdk_version = 29
         min_sdk_version = 24
         target_sdk_version = 29
@@ -28,7 +28,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.6.0-rc01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module app.build.gradle files
