--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,10 @@ buildscript {
         min_sdk_version = 24
         target_sdk_version = 29
         appcompat_version = '1.0.2'
-        ktx_version = '1.0.2'
+        ktx_version = '1.2.0'
         constraint_version = '1.1.3'
         material_version = '1.0.0'
-        lifecycle_version = '2.1.0-alpha04'
+        lifecycle_version = '2.2.0'
 
         // External
         retrofit_version = '2.5.0'
@@ -28,7 +28,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-rc01'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module app.build.gradle files
